--- a/openHASP-configs/HomeAssistant/plates/livingroom.yaml
+++ b/openHASP-configs/HomeAssistant/plates/livingroom.yaml
@@ -22,9 +22,13 @@
       - obj: "p0b5"
         properties:
           "text": "{{ states('sensor.hallway_temperature') }}"
+      - obj: "p0b10"
+        properties:
+          "text": "{{ states('sensor.time') }}"
       - obj: "p0b14"
         properties:
           "text": "{{ state_attr('weather.beech_house', 'temperature') }}"
+
 
       # - obj: "p0b21"
       #   properties:
