--- a/openHASP-configs/HomeAssistant/plates/porch.yaml
+++ b/openHASP-configs/HomeAssistant/plates/porch.yaml
@@ -22,6 +22,9 @@
       - obj: "p0b5"
         properties:
           "text": "{{ states('sensor.hallway_temperature') }}"
+      - obj: "p0b10"
+        properties:
+          "text": "{{ states('sensor.time') }}"
       - obj: "p0b14"
         properties:
           "text": "{{ state_attr('weather.beech_house', 'temperature') }}"
@@ -71,6 +74,17 @@
             - service: homeassistant.toggle
               entity_id: "switch.flood_light"
 
+      - obj: "p1b5" # switch, checkbox or btn with toggle true
+        properties:
+          "val": '{{ 1 if is_state("light.panic", "on") else 0 }}'
+          "text": '{{ "PANIC" if is_state("light.panic", "on") else "PANIC" | e }}'
+        event:
+          "down":
+            - service: homeassistant.toggle
+              entity_id: "light.panic"
+            - service: homeassistant.toggle
+              entity_id: "switch.flood_light"
+                            
 # Beginning of Alarm Panel
       - obj: "p12b1"          # Alarm Arm Home
         event:
