DPM-20230101 Adding house battery

--- a/openHASP-configs/HomeAssistant/plates/dining.yaml
+++ b/openHASP-configs/HomeAssistant/plates/dining.yaml
@@ -29,15 +29,10 @@
         properties:
           "text": "{{ state_attr('weather.beech_house', 'temperature') }}"
 
-      # - obj: "p0b21"
-      #   properties:
-      #     "text": "{{ states('sensor.velux_mbr_sensor_co2') }}"
-      - obj: "p0b30"
-        properties: 
-          "text": "{{ states('sensor.hallway_humidity') }}"
-      - obj: "p0b31"
+      - obj: "p0b20"
         properties:
-          "text": "{{ state_attr('weather.beech_house', 'humidity') }}"
+          "text": "{{ states('sensor.solis_remaining_battery_capacity') }}"
+
 
 # End Header
 
