--- a/openHASP-configs/HomeAssistant/plates/mainhall.yaml
+++ b/openHASP-configs/HomeAssistant/plates/mainhall.yaml
@@ -31,7 +31,7 @@
 
       - obj: "p0b20"
         properties:
-          "text": "{{ states('sensor.solis_remaining_battery_capacity') }}"
+          "text": "{{ states('sensor.pylontech_soc') }}"
           
       # End Header
 
